--- a/projectzen/main/templates/main/base.html
+++ b/projectzen/main/templates/main/base.html
@@ -156,7 +156,7 @@
     <footer>
         <div class="container">
             <h1>Подвал проекта</h1>
-            <p>© 2024 Ваш проект. Все права защищены.</p>
+            <p>© 2024 ProjectZen. Все права защищены правом  и левом.</p>
         </div>
     </footer>
 </body>
